--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -24,14 +24,16 @@ jobs:
       packages: write
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        ref: ${{ github.event.pull_request.head.sha }}
+
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
-        fetch-depth: 0
-        ref: ${{ github.event.pull_request.head.sha }}
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Configure Maven Settings
