--- a/pom.xml
+++ b/pom.xml
@@ -57,19 +57,20 @@
 		<kryo.version>2.24.0</kryo.version>
 		<objenesis.version>2.1</objenesis.version>
 
-		<snowflake-ingest.version>2.0.2</snowflake-ingest.version>
+		<snowflake-ingest.version>2.0.3</snowflake-ingest.version>
 		<failsafe.version>3.3.2</failsafe.version>
 		<assertj.version>3.21.0</assertj.version>
-		<junit5.version>5.9.1</junit5.version>
-		<testcontainers.version>1.17.2</testcontainers.version>
-		<mockito.version>3.4.6</mockito.version>
-		<jackson-bom.version>2.13.4.20221013</jackson-bom.version>
+		<junit5.version>5.10.0</junit5.version>
+		<testcontainers.version>1.19.1</testcontainers.version>
+		<mockito.version>5.2.0</mockito.version>
+		<jackson-bom.version>2.15.3</jackson-bom.version>
 
 		<japicmp.skip>false</japicmp.skip>
 		<japicmp.referenceVersion>3.0.0-1.16</japicmp.referenceVersion>
 
 		<slf4j.version>1.7.36</slf4j.version>
 		<log4j.version>2.17.2</log4j.version>
+		<jsr305.version>1.3.9</jsr305.version>
 	</properties>
 
 	<modules>
@@ -188,7 +189,7 @@
 			<dependency>
 				<groupId>com.google.code.findbugs</groupId>
 				<artifactId>jsr305</artifactId>
-				<version>1.3.9</version>
+				<version>${jsr305.version}</version>
 			</dependency>
 
 			<dependency>
@@ -335,18 +336,6 @@
 					<source>11</source>
 					<target>11</target>
 				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<executions>
-					<execution>
-						<!-- skip executing integration tests inherited by the parent pluginManagement -->
-						<id>integration-tests</id>
-						<phase />
-					</execution>
-				</executions>
 			</plugin>
 
 			<plugin>
