--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,18 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<executions>
+					<execution>
+						<!-- skip executing integration tests inherited by the parent pluginManagement -->
+						<id>integration-tests</id>
+						<phase />
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
 			</plugin>
 
