added checksum plugin for md5 and sha1

--- a/flink-connector-snowflake/pom.xml
+++ b/flink-connector-snowflake/pom.xml
@@ -141,6 +141,10 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>net.nicoulaj.maven.plugins</groupId>
+                <artifactId>checksum-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
