moved to public Sonatype deploy

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
 		<jsr305.version>1.3.9</jsr305.version>
 
 		<checksum-maven-plugin.version>1.11</checksum-maven-plugin.version>
+		<nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
 	</properties>
 
 	<modules>
@@ -301,6 +302,17 @@
 					<configuration>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.sonatype.plugins</groupId>
+					<artifactId>nexus-staging-maven-plugin</artifactId>
+					<version>${nexus-staging-maven-plugin.version}</version>
+					<extensions>true</extensions>
+					<configuration>
+						<serverId>ossrh</serverId>
+						<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+						<autoReleaseAfterClose>true</autoReleaseAfterClose>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -382,25 +394,5 @@
 			</plugin>
 		</plugins>
 
-		<!-- Allow the distribution to happen through Amazon S3 -->
-		<extensions>
-			<extension>
-				<groupId>com.github.seahen</groupId>
-				<artifactId>maven-s3-wagon</artifactId>
-				<version>1.3.3</version>
-			</extension>
-		</extensions>
-
 	</build>
-
-	<distributionManagement>
-
-		<!-- Overwrite parent release repo to DeltaStream S3 -->
-		<repository>
-			<id>apache.releases.https</id>
-			<name>Apache Release Distribution to DeltaStream Repository</name>
-			<url>s3://deltastream-packages-maven/release</url>
-		</repository>
-
-	</distributionManagement>
 </project>
