--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -8,13 +8,6 @@ on:
     paths:
       - '**'
 
-env:
-  # env vars for AWW CLI
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  AWS_DEFAULT_REGION: 'us-east-2'
-  BUILD_ENV: 's3-actions'
-
 jobs:
   build:
 
@@ -34,16 +27,11 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
-
-    - name: Configure Maven Settings
-      id: configure-maven
-      uses: DamianReeves/write-file-action@v1.2
-      with:
-        path: ${{ github.workspace }}/settings.xml
-        contents: ${{ secrets.MVN_SETTINGS }}
-        write-mode: overwrite
 
     - name: Test and Build Artifact
       id: build
-      run: mvn package -Drevision=${{ github.event.pull_request.head.sha }} -U -B -ff -fae -s $GITHUB_WORKSPACE/settings.xml -f pom.xml
+      run:
+        mvn package \
+          -Drevision=${{ github.event.pull_request.head.sha }} \
+          -U -B -ff -fae \
+          -f pom.xml
