--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -8,6 +8,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java:
+          - 17
     permissions:
       contents: read
       packages: write
@@ -17,10 +21,10 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up JDK 11
+    - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: ${{ matrix.java }}
         distribution: 'temurin'
         server-id: ossrh
         server-username: MAVEN_USERNAME
