added java 11 build to release runs

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -11,6 +11,7 @@ jobs:
     strategy:
       matrix:
         java:
+          - 11
           - 17
     permissions:
       contents: read
@@ -36,12 +37,19 @@ jobs:
       run:
         cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
 
+    - name: Create version name
+      run: |
+        if [ "${{ matrix.java }}" != "17" ]; then
+          echo "VERSION_NAME=${{ github.event.release.tag_name }}-j${{ matrix.java }}" >> $GITHUB_ENV
+        else
+          echo "VERSION_NAME=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
+
     - name: Build and Release Artifact
       id: release-jar
       run: |
         cd flink-connector-snowflake && \
           mvn deploy -P docs-and-source,release \
-            -Drevision=${{ github.event.release.tag_name }} \
+            -Drevision=${{ env.VERSION_NAME }} \
             -U -B -ff -fae \
             -s $GITHUB_WORKSPACE/settings.xml \
             -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} \
