--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Create version name
       run: |
         if [ "${{ matrix.java }}" != "17" ]; then
-          echo "VERSION_NAME=${{ github.event.pull_request.head.sha }}-${{ matrix.java }}" >> $GITHUB_ENV
+          echo "VERSION_NAME=${{ github.event.pull_request.head.sha }}-j${{ matrix.java }}" >> $GITHUB_ENV
         else
           echo "VERSION_NAME=${{ github.event.pull_request.head.sha }}" >> $GITHUB_ENV
 
