--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -46,5 +46,6 @@ jobs:
       run: |
         mvn package \
           -Drevision=${{ env.VERSION_NAME }} \
+          -Djava.version=${{ matrix.java }} \
           -U -B -ff -fae \
           -f pom.xml
