CI: Add JDK version to build step + sync version enforcement with build (#37)
* fixed shell run for VERSION

* parameterized java version for build enforcement

* added java version to the release CI

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -43,6 +43,7 @@ jobs:
           echo "VERSION_NAME=${{ github.event.release.tag_name }}-j${{ matrix.java }}" >> $GITHUB_ENV
         else
           echo "VERSION_NAME=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
+        fi
 
     - name: Build and Release Artifact
       id: release-jar
@@ -50,6 +51,7 @@ jobs:
         cd flink-connector-snowflake && \
           mvn deploy -P docs-and-source,release \
             -Drevision=${{ env.VERSION_NAME }} \
+            -Djava.version=${{ matrix.java }} \
             -U -B -ff -fae \
             -s $GITHUB_WORKSPACE/settings.xml \
             -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} \
