--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,8 @@
 
 		<japicmp.skip>false</japicmp.skip>
 		<japicmp.referenceVersion>3.0.0-1.16</japicmp.referenceVersion>
+		<checkstyle.version>10.18.2</checkstyle.version>
+		<spotless.skip>false</spotless.skip>
 
 		<slf4j.version>1.7.36</slf4j.version>
 		<log4j.version>2.17.2</log4j.version>
@@ -362,12 +364,21 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>3.5.0</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.puppycrawl.tools</groupId>
+						<artifactId>checkstyle</artifactId>
+						<!-- Note: match version with docs/flinkDev/ide_setup.md -->
+						<version>${checkstyle.version}</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>com.diffplug.spotless</groupId>
 				<artifactId>spotless-maven-plugin</artifactId>
 				<configuration>
-					<skip>false</skip>
+					<skip>${spotless.skip}</skip>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -400,12 +411,11 @@
 						<configuration>
 							<rules>
 								<requireMavenVersion>
-									<!-- maven version must be at least 3.2.5 -->
-									<version>[3.2.5,)</version>
+									<version>[3.8.6,)</version>
 								</requireMavenVersion>
 								<requireJavaVersion>
 									<!-- java version must be what's set for the build environment -->
-									<version>${java.version}</version>
+									<version>[11,)</version>
 								</requireJavaVersion>
 							</rules>
 						</configuration>
