--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
 		<checksum-maven-plugin.version>1.11</checksum-maven-plugin.version>
 		<nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
 		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+		<spotless-maven-plugin.version>2.43.0</spotless-maven-plugin.version>
 		<maven-shade-plugin.version>3.3.0</maven-shade-plugin.version>
 
 	</properties>
@@ -377,8 +378,15 @@
 			<plugin>
 				<groupId>com.diffplug.spotless</groupId>
 				<artifactId>spotless-maven-plugin</artifactId>
+				<version>${spotless-maven-plugin.version}</version>
 				<configuration>
 					<skip>${spotless.skip}</skip>
+					<java>
+						<googleJavaFormat>
+							<version>1.24.0</version>
+							<style>AOSP</style>
+						</googleJavaFormat>
+					</java>
 				</configuration>
 			</plugin>
 			<plugin>
