--- a/pom.xml
+++ b/pom.xml
@@ -60,9 +60,13 @@
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<target.java.version>${java.version}</target.java.version>
 
+		<!-- Flink dependencies -->
 		<flink.version>2.0.0</flink.version>
 		<kryo.version>5.6.2</kryo.version>
 		<objenesis.version>3.3</objenesis.version>
+		<slf4j.version>1.7.36</slf4j.version>
+		<log4j.version>2.24.1</log4j.version>
+		<jsr305.version>1.3.9</jsr305.version>
 
 		<snowflake-ingest.version>2.3.0</snowflake-ingest.version>
 		<junit5.version>5.12.2</junit5.version>
@@ -75,10 +79,6 @@
 		<japicmp.referenceVersion>3.0.0-1.16</japicmp.referenceVersion>
 		<checkstyle.version>10.18.2</checkstyle.version>
 		<spotless.skip>false</spotless.skip>
-
-		<slf4j.version>1.7.36</slf4j.version>
-		<log4j.version>2.17.2</log4j.version>
-		<jsr305.version>1.3.9</jsr305.version>
 
 		<checksum-maven-plugin.version>1.11</checksum-maven-plugin.version>
 		<nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
