--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 		<log4j.version>2.25.3</log4j.version>
 		<jsr305.version>1.3.9</jsr305.version>
 
-		<snowflake-ingest.version>2.3.0</snowflake-ingest.version>
+		<snowpipe-streaming.version>1.1.2</snowpipe-streaming.version>
 		<junit5.version>5.12.2</junit5.version>
 		<testcontainers.version>1.21.3</testcontainers.version>
 		<mockito.version>5.17.0</mockito.version>
@@ -159,9 +159,9 @@
 		<dependencies>
 
 			<dependency>
-				<groupId>net.snowflake</groupId>
-				<artifactId>snowflake-ingest-sdk</artifactId>
-				<version>${snowflake-ingest.version}</version>
+				<groupId>com.snowflake</groupId>
+				<artifactId>snowpipe-streaming</artifactId>
+				<version>${snowpipe-streaming.version}</version>
 			</dependency>
 
 			<!-- Flink dependencies -->
